# ShellAI

./: .gitignore  .pylintrc  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
shellai/: __init__.py  ask.py  cli.py  collect_info.py  config.py
